[gd_scene load_steps=4 format=3 uid="uid://c3yqt4njvk68q"]

[ext_resource type="Script" uid="uid://b4nrtvljkmrxr" path="res://Scenes/UI/ingame_ui.gd" id="1_cux0t"]
[ext_resource type="Texture2D" uid="uid://dcxyqwyn5ixwe" path="res://Assets/music_on.png" id="2_8kic7"]
[ext_resource type="Texture2D" uid="uid://bl7dqbi5j8lwt" path="res://Assets/sound_on.png" id="3_cj5sr"]

[node name="HuD" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_cux0t")

[node name="hpBar" type="ProgressBar" parent="."]
modulate = Color(1, 0, 0, 1)
top_level = true
offset_left = 1127.0
offset_top = 36.0
offset_right = 1147.0
offset_bottom = 612.0
value = 100.0
fill_mode = 3
show_percentage = false

[node name="xpBar" type="ProgressBar" parent="."]
modulate = Color(1, 0.920181, 0, 1)
offset_left = 1102.0
offset_top = 36.0
offset_right = 1122.0
offset_bottom = 612.0
fill_mode = 3
show_percentage = false

[node name="MusicButton" type="Button" parent="."]
texture_filter = 1
offset_top = 81.0
offset_right = 72.0
offset_bottom = 153.0
icon = ExtResource("2_8kic7")

[node name="SoundButton" type="Button" parent="."]
texture_filter = 1
offset_right = 72.0
offset_bottom = 72.0
icon = ExtResource("3_cj5sr")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_top = 616.0
offset_right = 515.0
offset_bottom = 648.0
bbcode_enabled = true

[connection signal="pressed" from="MusicButton" to="." method="_on_music_button_pressed"]
[connection signal="pressed" from="SoundButton" to="." method="_on_sound_button_pressed"]
